[tool.black]
line-length = 120

[tool.poetry]
name = "gliff"
version = "0.1.0"
description = "gliff.ai SDK - a Python SDK for developing Python script or AI-in-the-loop trusted services for the gliff.ai platform"
authors = ["Chas Nelson <chas@gliff.ai>"]
license = "AGPL-3.0-or-later"
include = ["LICENSE",]

[tool.poetry.dependencies]
python = "^3.9.7"
python-decouple = "^3.5"
loguru = "^0.6.0"
etebase = "^0.31.2"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^24.3.0"
flake8 = "^4.0.1"
mypy = "^0.931"

[tool.poetry.scripts]
lint = "flake8.main.cli:main"

[tool.mypy]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
